k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-air
  namespace: contoso-air
  labels:
    app.kubernetes.io/name: contoso-air
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: contoso-air
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
